# qualys-agentcore

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
cloudformation/: centralized-hub.yaml  centralized-spoke-minimal.yaml  centralized-spoke.yaml  org-cloudtrail-forwarder.yaml
scanner-lambda/: ai_service_detector.py  bulk_scan.py  handlers.py  mcp_detector.py  qualys_api.py  requirements-dev.txt
scripts/: config_loader.py  demo.py  validate.py
tests/: conftest.py
tests/fixtures/: events.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_ai_service_detector.py  test_bulk_scan.py  test_handlers.py  test_mcp_detector.py  test_qualys_api.py
